setup actual color palette

--- a/src/app/disclosure-page/disclosure-page.component.scss
+++ b/src/app/disclosure-page/disclosure-page.component.scss
@@ -1,6 +1,7 @@
 @import "../../assets//stylesheets//mixins/mixins.scss";
 
 section#disclosure-page-component {
+  background-color: #ffffff;
   margin: 0 auto;
   max-width: 800px;
   padding: 0 20px;
