--- a/src/app/site-footer/site-footer.component.scss
+++ b/src/app/site-footer/site-footer.component.scss
@@ -1,61 +1,60 @@
 @import "../../assets//stylesheets//mixins/mixins.scss";
 
 section.site-footer-component {
-  background-color: $grey-4;
-  color: #ffffff;
+  border-top: 2px solid $blue-7;
   margin-top: 80px;
 
-  > header,
-  > footer {
-    font-size: $small;
-    line-height: 20px;
-    padding: 16px;
-  }
+  > ul {
 
-  > header {
+    > li {
+      padding-bottom: 20px;
 
-    > ul {
+      &:first-child {
+        padding-top: 20px;
+      }
 
-      > li {
-        display: inline-block;
-        padding-left: 60px;
-        vertical-align: top;
+      > ul {
 
-        &:first-child {
-          padding-left: 0;
-        }
+        > li {
+          
+          &:first-child {
+            @include accent-font;
+            color: $grey-8;
+            font-weight: 600;
+          }
 
-        > ul {
+          > i {
+            font-size: $normal;
+            margin-right: 8px;
+          }
 
-          > li {
+          > span,
+          > a {
+            color: $blue-4;
             cursor: pointer;
+            text-decoration: none;
+
+            -moz-transition: all 0.2s ease-in-out;
+            -o-transition: all 0.2s ease-in-out;
+            -webkit-transition: all 0.2s ease-in-out;
+            transition: all 0.2s ease-in-out;
 
             &:hover {
+              color: $blue-6;
               text-decoration: underline;
             }
 
-            &:first-child {
-              cursor: default;
-              font-weight: 600;
-              margin-bottom: 4px;
+            &:active,
+            &:visited {
+              color: $blue-4;
 
               &:hover {
-                text-decoration: none;
-              }
-
-              > i {
-                font-size: $normal;
-                margin-right: 8px;
+                color: $blue-6;
               }
             }
           }
         }
       }
     }
-  }
-
-  > footer {
-    padding-top: 32px;
-    text-align: right;
   }
 }
