create a quoted-content component

--- a/src/app/disclosure-page/disclosure-page.component.html
+++ b/src/app/disclosure-page/disclosure-page.component.html
@@ -23,8 +23,7 @@
         From the mind that brought you The 4-Hour Workweek (and The Random Show with Kevin Rose):
       </p>
 
-      <!-- todo: app quote component -->
-      <div>
+      <app-quoted-content>
         <p>
           Per the FTC rules, if I interview someone and they grab the bill for lunch, I would need to specify this. Ditto if I use an Amazon link that gets me 8 cents instead of an Amazon link that gets me 0 cents. If someone gives me a comfy t-shirt with a logo and I wear it in a photo, same deal. Disclaimers all over the place. This would be tedious for me and a continual eye sore for readers. But rules is rules. To cover my ass and preserve your reading experience, please assume that, for every recommendation, link, and product I use, the following all hold true:
         </p>
@@ -45,7 +44,7 @@
             writer got stock options
           </li>
         </ul>
-      </div>
+      </app-quoted-content>
 
       <p>
         So there you have it. FTC satiation. I feel like I should reward you for reading a "disclosure" page… well, have you seen those 3d gifs? Check this out:
