create about page, extract redundant 'standard' page layout into a new layouts.scss file and use it in the disclosure and about page stylesheets, add in a router module option to enforce starting at the top of the page on navigateByUrl calls

--- a/src/app/about-page/about-page.component.scss
+++ b/src/app/about-page/about-page.component.scss
@@ -1,5 +1,5 @@
 @import "../../assets//stylesheets//mixins/mixins.scss";
 
-section#disclosure-page-component {
+section#about-page-component {
   @include standard-page-layout;
 }
