--- a/src/app/disclosure-page/disclosure-page.component.html
+++ b/src/app/disclosure-page/disclosure-page.component.html
@@ -50,7 +50,9 @@
         So there you have it. FTC satiation. I feel like I should reward you for reading a "disclosure" page… well, have you seen those 3d gifs? Check this out:
       </p>
 
-      <img src="http://i.imgur.com/Afkkhrx.gif" />
+      <img src="http://i.imgur.com/Afkkhrx.gif"
+           alt="Will Smith and Martin Lawrence letting the client know they 'better stop playing' when the client asked if the site worked in IE"
+           title="Will Smith and Martin Lawrence letting the client know they 'better stop playing' when the client asked if the site worked in IE" />
     </main>
 
     <section class="desktop-ad">
