--- a/src/assets/stylesheets/mixins/layouts.scss
+++ b/src/assets/stylesheets/mixins/layouts.scss
@@ -21,11 +21,13 @@
     width: calc(100% - 216px);
 
     @media (max-width: $small-view) {
+      padding-right: 0;
       width: 100%;
     }
 
     > img {
       margin-top: 20px;
+      max-width: 100%;
     }
   }
 
