extract common page layout into a ng-content driven component, add in post for UCC, update quote component to take an optional flag that shows quote content in a terminal shell like way

--- a/src/app/about-page/about-page.component.html
+++ b/src/app/about-page/about-page.component.html
@@ -1,46 +1,32 @@
 <section id="about-page-component">
+  <app-standard-page>
+    <h1>
+      About
+    </h1>
 
-    <app-site-header></app-site-header>
+    <h2>
+      Just what is the point of all of this?
+    </h2>
 
-    <section class="mobile-ad">
-      <app-ad-tile></app-ad-tile>
-    </section>
-  
-    <main>
-      <h1>
-        About
-      </h1>
+    <p>
+      Fun!
+    </p>
 
-      <h2>
-        Just what is the point of all of this?
-      </h2>
+    <p>
+      This is really a blog for myself.
+    </p>
 
-      <p>
-        Fun!
-      </p>
+    <p>
+      I do hope others find this place, and that some people even enjoy it (or at the very least learn something useful), but in the end it's a place where I come to share things I find cool, a place to rant about things that irk me, and a place to play around with interesting components and designs.
+    </p>
 
-      <p>
-        This is really a blog for myself.
-      </p>
+    <p>
+      It's also a place where I get to share random gifs with the world (you're welcome) =]
+    </p>
 
-      <p>
-        I do hope others find this place, and that some people even enjoy it (or at the very least learn something useful), but in the end it's a place where I come to share things I find cool, a place to rant about things that irk me, and a place to play around with interesting components and designs.
-      </p>
-
-      <p>
-        It's also a place where I get to share random gifs with the world (you're welcome) =]
-      </p>
-
-      <img src="http://media.giphy.com/media/dHr3xqGHhcCDC/giphy.gif" 
-           alt="Chris Tucker teaching an engineer to dance. No, wait, that's Jackie Chan, this is a scene from Rush Hour"
-           title="Chris Tucker teaching an engineer to dance. No, wait, that's Jackie Chan, this is a scene from Rush Hour" />
-    </main>
-
-    <section class="desktop-ad">
-      <app-ad-tile></app-ad-tile>
-    </section>
-  
-    <app-site-footer></app-site-footer>
-  
-  </section>
+    <img src="http://media.giphy.com/media/dHr3xqGHhcCDC/giphy.gif" 
+          alt="Chris Tucker teaching an engineer to dance. No, wait, that's Jackie Chan, this is a scene from Rush Hour"
+          title="Chris Tucker teaching an engineer to dance. No, wait, that's Jackie Chan, this is a scene from Rush Hour" />
+  </app-standard-page>
+</section>
   
