--- a/src/app/quoted-content/quoted-content.component.html
+++ b/src/app/quoted-content/quoted-content.component.html
@@ -1,3 +1,3 @@
-<section class="quoted-content-component">
+<section [ngClass]="{ 'quoted-content-component': true, 'terminal-input': terminalInput }">
   <ng-content></ng-content>
 </section>
