--- a/src/app/standard-page/standard-page.component.scss
+++ b/src/app/standard-page/standard-page.component.scss
@@ -1,6 +1,6 @@
-// The layout of pages that aren't "doing something special"...
-// ... you know ... a standard page.
-@mixin standard-page-layout {
+@import "../../assets//stylesheets//mixins/mixins.scss";
+
+section#standard-page-component {
   background-color: #ffffff;
   margin: 0 auto;
   max-width: 800px;
@@ -23,11 +23,6 @@
     @media (max-width: $small-view) {
       padding-right: 0;
       width: 100%;
-    }
-
-    > img {
-      margin-top: 20px;
-      max-width: 100%;
     }
   }
 
