--- a/src/app/quoted-content/quoted-content.component.scss
+++ b/src/app/quoted-content/quoted-content.component.scss
@@ -4,8 +4,12 @@ section.quoted-content-component {
   border-left: 2px solid $blue-5;
   font-size: $normal;
   line-height: 24px;
-  margin: 40px 80px 40px 0;
-  padding-left: 60px;
+  margin: 40px 0;
+  padding: 0 60px;
+
+  @media (max-width: $small-view) {
+    font-size: $small;
+  }
 
   &.terminal-input {
     @include code-font;
