--- a/src/app/home-page/home-page.component.scss
+++ b/src/app/home-page/home-page.component.scss
@@ -1,8 +1,12 @@
 @import "../../assets//stylesheets//mixins/mixins.scss";
 
 section#home-page-component {
-  background-color: #ffffff;
-  margin: 0 auto;
-  max-width: 800px;
-  padding: 0 20px;
+  // add any non-standard page styles here.
+
+  ul {
+
+    > li {
+      
+    }
+  }
 }
