--- a/src/app/site-footer/site-footer.component.html
+++ b/src/app/site-footer/site-footer.component.html
@@ -8,12 +8,12 @@
           <i class="fas fa-sitemap"></i> site stuff
         </li>
         <li>
-          <span tabindex="0" (click)="navigateToAbout()" (keyup.enter)="navigateToAbout()">
+          <span class="link" tabindex="0" (click)="navigateToAbout()" (keyup.enter)="navigateToAbout()">
             about
           </span>
         </li>
         <li>
-          <span tabindex="0" (click)="navigateToDisclosure()" (keyup.enter)="navigateToDisclosure()">
+          <span class="link" tabindex="0" (click)="navigateToDisclosure()" (keyup.enter)="navigateToDisclosure()">
             disclosure
           </span>
         </li>
