add in numbers post

--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -21,6 +21,11 @@
           The one about UCC
         </span>
       </li>
+      <li>
+        <span class="link" (click)="navigateToNumbersPost()" (keyup.enter)="navigateToNumbersPost()">
+          The one about Numbers
+        </span>
+      </li>
     </ul>
   </app-standard-page> 
 </section>
