minor css update to quoted content padding for small viewports

--- a/src/app/quoted-content/quoted-content.component.scss
+++ b/src/app/quoted-content/quoted-content.component.scss
@@ -9,6 +9,7 @@ section.quoted-content-component {
 
   @media (max-width: $small-view) {
     font-size: $small;
+    padding: 0 32px;
   }
 
   &.terminal-input {
