minor update to h1 styles, update link/link-text of the base X numbers post

--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -7,10 +7,7 @@
       Welcome!
     </h3>
     <p>
-      On this particular tech blog you'll find posts about general technical concepts, posts about actual technical implementations (typically in <a href="https://angular.io" target="_blank">Angular</a>), and posts about what coding is like.
-    </p>
-    <p>
-      You'll also find gifs at the end of each post, and even at the end of the <span class="link" tabindex="0" (click)="navigateToAbout()" (keyup.enter)="navigateToAbout()">about</span> and <span class="link" tabindex="0" (click)="navigateToDisclosure()" (keyup.enter)="navigateToDisclosure()">disclosure</span> pages! (Hooray?)
+      On this particular tech blog you'll find posts about general technical concepts, posts about actual technical implementations (typically in <a href="https://angular.io" target="_blank">Angular</a>), and posts about what coding is like. You'll also find gifs at the end of each post (and even at the end of the <span class="link" tabindex="0" (click)="navigateToAbout()" (keyup.enter)="navigateToAbout()">about</span> and <span class="link" tabindex="0" (click)="navigateToDisclosure()" (keyup.enter)="navigateToDisclosure()">disclosure</span> pages)!
     </p>
     <h3>
       posts:
@@ -23,7 +20,7 @@
       </li>
       <li>
         <span class="link" (click)="navigateToNumbersPost()" (keyup.enter)="navigateToNumbersPost()">
-          The one about Numbers
+          The one about the math of numbers
         </span>
       </li>
     </ul>
